python/python-flask-tls/server/sgx-deployment.yml
apiVersion: v1
kind: Pod
metadata:
  name: python-flask-server-sgx
  labels:
    app: python-flask-server-sgx
spec:
  containers:
  - name: python-flask-server-sgx
    image: <your registry path>/python-flask-server-sgx
    volumeMounts:
    - mountPath: /dev/isgx
      name: isgx
    - mountPath: /dev/gsgx
      name: gsgx
    - mountPath: /var/run/aesmd/aesm.socket
      name: aesm-socket
    ports:
    - containerPort: 5002
      name: http
      protocol: TCP
  volumes:
  - name: isgx
    hostPath:
      path: /dev/isgx
  - name: gsgx
    hostPath:
      path: /dev/gsgx
  - name: aesm-socket
    hostPath:
      path: /var/run/aesmd/aesm.socket
