python/python-flask-tls/server/server.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
  labels:
    app: server
spec:
  selector:
    app: server
  ports:
  - protocol: TCP
    port: 5002
---
apiVersion: v1
kind: Pod
metadata:
  name: server
  labels:
    app: server
spec:
  containers:
  - name: server
    image: <your registry path>/server
    ports:
    - containerPort: 5002
