python/python-flask-tls/server/sgx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-flask-server-service-sgx
  labels:
    app: python-flask-server-sgx
spec:
  type: NodePort
  selector:
    app: python-flask-server-sgx
  ports:
  - protocol: TCP
    port: 5002
    nodePort: 32700
